# AeroGL

./: .gitignore  AeroGL.slnx  AeroPlatform.h  CMakeLists.txt  Engine.c  Engine.h  Main.c  Makefile  README.md  Stdafx.h  imgui.ini  make_vs_solution.bat  run.sh
AeroLib/: CMakeLists.txt  UnorderedMap.c  Vector.c  Vector.h
Assets/Maps/AnubisCity/: AnubisMap.json
Assets/Maps/map_new/: AnubisMap.json
Assets/Shaders/: debug_shader.frag  debug_shader.vert  mesh_3d_shader.frag  normal_shader.frag  normal_shader.vert  terrain_shader.vert
Buffers/: Buffer.c  CMakeLists.txt  IndirectBufferObject.c  IndirectBufferObject.h  ShaderStorageBufferObject.c  ShaderStorageBufferObject.h  TerrainBuffer.c  TerrainBuffer.h  UniformBufferObject.c  UniformBufferObject.h
Core/: CMakeLists.txt  Camera.c  Camera.h  CoreUtils.c  CoreUtils.h  Input.c  Input.h  Log.h  Window.c  Window.h
CoreEngine/: CoreEngine.vcxproj  CoreEngine.vcxproj.filters  Engine.c  Engine.h  Main.c  Stdafx.h  imgui.ini
CoreEngine/Assets/Maps/AnubisCity/: AnubisMap.json
CoreEngine/Assets/Maps/map_new/000001/: HeightMap.raw
CoreEngine/Assets/Shaders/: debug_shader.frag  debug_shader.vert  mesh_3d_shader.vert  terrain_shader.frag  terrain_shader.vert
CoreEngine/Buffers/: Buffer.c  Buffer.h  GLBuffer.c  GLBuffer.h  IndirectBufferObject.c  IndirectBufferObject.h  ShaderStorageBufferObject.c  ShaderStorageBufferObject.h  TerrainBuffer.c  TerrainBuffer.h  UniformBufferObject.c  UniformBufferObject.h
CoreEngine/Core/: Camera.c  Camera.h  CoreUtils.c  CoreUtils.h  Input.c  Input.h  Log.h  Window.c  Window.h
CoreEngine/Lib/: Comments.h  Map.c  Map.h  Vector.c  Vector.h
CoreEngine/Math/: EngineMath.h  FloatGrid.c  FloatGrid.h  MathUtils.h  Transform.c  Transform.h
CoreEngine/Math/Grids/: FloatGrid.c  FloatGrid.h
CoreEngine/Math/Matrix/: Matrix3.h  Matrix4.h
CoreEngine/Math/Projection/: OrthographicProjection.h  PerspectiveProjection.c  PerspectiveProjection.h
CoreEngine/Math/Quaternion/: Quaternion.h
CoreEngine/Math/Vectors/: Vector2.h  Vector3.h  Vector4.h
CoreEngine/Math/Vertex/: Vertex.h
CoreEngine/Meshes/: Mesh2D.c  Mesh2D.h  Mesh3D.c  Mesh3D.h  TerrainMesh.c  TerrainMesh.h
CoreEngine/OpenGLUtils/: stb_image.c
CoreEngine/PipeLine/: Shader.c  StateManager.c  Texture.c  Texture.h  Utils.c
CoreEngine/Renderer/: Buffer.c  Buffer.h  DebugRenderer.c  DebugRenderer.h  Renderer.c  Renderer.h  Shader.c  Shader.h  StateManager.c  StateManager.h  TerrainRenderer.c  TerrainRenderer.h
CoreEngine/Resources/: MemoryManager.c  MemoryManager.h  TexturesManager.h
CoreEngine/Terrain/: TerrainData.h  TerrainPatch.c  TerrainPatch.h
CoreEngine/Terrain/Terrain/: Terrain.c  Terrain.h  TerrainLoad.c
CoreEngine/Terrain/TerrainManager/: TerrainManager.c  TerrainManager.h
CoreEngine/Terrain/TerrainMap/: TerrainMap.c  TerrainMap.h  TerrainMapLoad.c
CoreEngine/UserInterface/: Interface_imgui.cpp  Interface_imgui.h
LibImageUI/: CMakeLists.txt  LibImageUI.vcxproj  LibImageUI.vcxproj.filters
LibImageUI/ImGuizmo/: GraphEditor.cpp  ImCurveEdit.cpp  ImGradient.cpp  ImGuizmo.cpp  ImSequencer.cpp
Math/: CMakeLists.txt  EngineMath.h  MathUtils.h  Stdafx.c  Stdafx.h  Transform.c  Transform.h
Math/Grids/: FloatGrid.c  FloatGrid.h
Math/Matrix/: Matrix3.c  Matrix3.h  Matrix4.h
Math/Projection/: OrthographicProjection.c
Math/Quaternion/: Quaternion.h
Math/Vectors/: Vector2.h  Vector3.h  Vector4.h
Meshes/: CMakeLists.txt  Mesh3D.c  Mesh3D.h  TerrainMesh.c  TerrainMesh.h
MyLIB/: CMakeLists.txt  UnorderedMap.h  Vector.h
OpenGLUtils/: CMakeLists.txt  stb_image.c
PipeLine/: CMakeLists.txt  Shader.c  Shader.h  StateManager.c  StateManager.h  Texture.c  Texture.h  Utils.c  Utils.h
Renderer/: CMakeLists.txt  DebugRenderer.c  DebugRenderer.h  TerrainRenderer.c  TerrainRenderer.h
Resources/: CMakeLists.txt  MemoryManager.c  MemoryManager.h  MemoryTags.h  TexturesManager.c  TexturesManager.h
Terrain/: CMakeLists.txt  TerrainData.h  TerrainPatch.c  TerrainPatch.h
Terrain/Terrain/: Terrain.c  Terrain.h  TerrainLoad.c
Terrain/TerrainManager/: TerrainManager.c  TerrainManager.h  TerrainManagerEditor.c  TerrainManagerEditorAccessors.c
Terrain/TerrainMap/: TerrainMap.c  TerrainMap.h  TerrainMapLoad.c
Terrain/TerrainTextureset/: TerrainTextureset.c  TerrainTextureset.h
UserInterface/: CMakeLists.txt  Interface_imgui.cpp  UserInterface.h
